<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".NeuhoffProjectile"
    android:orientation="vertical">

    <TextView android:text="@string/angle"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:id="@+id/angle" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_angle"
        android:inputType="numberDecimal"/>

    <TextView android:text="@string/velocity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/velocity" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_velocity"
        android:inputType="numberDecimal"/>

    <TextView android:text="@string/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_time"
        android:inputType="numberDecimal"/>

    <Button android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calculate" />

    <TextView android:text="@string/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:id="@+id/result"/>

</LinearLayout>
